mengubah deskripsi diri

--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
       <h1 class="display-4">Muhammad Farras Abdurrahman</h1>
       <div class="row justify-content-center">
         <div class="col-md-6">
-          <p class="lead">I am an S1 Information Systems graduate with a concentration on IT Specialist, Scriptwriting, Design, and Digital Marketing | Development System Internal at PT. Padma Soode Indonesia.</p>
+          <p class="lead">
+            I am an S1 Information Systems graduate with a concentration on IT Specialist, Administration, Technical Writer, and Data/Business Analyst | Have Experience Intern at PT. Padma Soode Indonesia as a Development System.
+          </p>
         </div>
       </div>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
@@ -74,16 +76,16 @@
         <div class="row justify-content-center fs-5 text-center">
           <div class="col-md-4">
             <p>
-              I am a fresh Nusa Mandiri University Information Systems graduate with a strong desire to pursue a career in IT. I set a goal for myself in college to graduate on time in 3.5 years, which I believe I can fulfill with a 3.68
-              GPA. I also had internship experience as a Development System at PT. Padma Soode Indonesia, where I was responsible for developing HRD website applications as well as monitoring associated systems. I'm searching for ways to
-              contribute more in the IT field, where I can put my skills and interests to excellent use.
+              I am a fresh Nusa Mandiri University Information Systems graduate. I set a goal for myself in college to graduate on time in 4 years, which I believe I can fulfill with a 3.70 GPA. I also had internship experience as a
+              Development System at PT. Padma Soode Indonesia, where I was responsible for developing HRD website applications as well as monitoring associated systems. I'm searching for ways to contribute more in the IT field, where I can
+              put my skills and interests to excellent use.
             </p>
           </div>
           <div class="col-md-4">
             <p>
-              When I intern at PT. Padma Soode Indonesia I was Develop a website application for the HRD system to replace the outdated Microsoft-based system. Excel and Microsoft Access can be used to make things easier and simpler.
-              Conduct a series of interviews with HRD personnel to decide which flowchart best fits the facts. Monthly meetings with internship supervisors, IT leaders, and a number of HR personnel who can attend to track application
-              progress. Debugging and revision in accordance with the needs of the company.
+              When I intern at PT. Padma Soode Indonesia I was Develop a website application for the HRD system to replace the outdated Microsoft-based system. Microsoft Office can be used to make things easier and simpler. Conduct a series
+              of interviews with HRD personnel to decide which flowchart best fits the facts. Monthly meetings with internship supervisors, IT leaders, and a number of HR personnel who can attend to track application progress. Debugging and
+              revision in accordance with the needs of the company.
             </p>
           </div>
         </div>
