--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
       <div class="row justify-content-center">
         <div class="col-md-6">
           <p class="lead">
-            I am an S1 Information Systems graduate with a concentration on IT Specialist, Administration, Technical Writer, and Data/Business Analyst | Have Experience Intern at PT. Padma Soode Indonesia as a Development System.
+            S1 Information Systems graduate with an emphasis on IT Support, Web Development, System Analyst, UI/UX Designer, Technical Writer, SEO Specialist, Product Manager, Business Analyst and Content Creative. | Have Experience Intern
+            at PT. Padma Soode Indonesia as a Development System.
           </p>
         </div>
       </div>
@@ -212,7 +213,7 @@
 
     <!-- Footer -->
     <footer class="text-light bg-primary text-center pb-3">
-      <p>Made With <i class="bi bi-suit-heart-fill text-danger"></i> Download My Portfolio <a href="https://drive.google.com/file/d/1pcwrPCuerb0ftvJtD108l0T2v8TZqBuZ/view?usp=sharing" target="_blank" class="text-light fw-bold">Here</a></p>
+      <p>Made With <i class="bi bi-suit-heart-fill text-danger"></i> Download My Portfolio <a href="https://drive.google.com/file/d/1EKXwfzmPpbCDpG8L0IvNCALe4ob_V4RV/view?usp=sharing" target="_blank" class="text-light fw-bold">Here</a></p>
     </footer>
     <!-- Akhir Footer -->
 
